# aero-data-engineer

./: .gitignore  README.md  cookiecutter.json  docker-compose.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pre-commit.yml
_modules/clickhouse/: docker-entrypoint-initdb.sql
aero/: .env  requirements.txt
aero/dags/: to_datalake.py
aero/resources/: __init__.py  abstract.py
aero/resources/datalake/: resource.py
aero/resources/datamart/: resource.py
defi-airflow/: Dockerfile
defi-airflow/dwh/cfg/: engine.py
defi-fastapi/: requirements.txt
defi-fastapi/_fixtures/: conftest.py
defi-fastapi/src/cfg/: settings.py
defi-fastapi/src/funds/app/views/labels/: view.py
defi-react/: Dockerfile
defi-react/src/components/Wallet/: WalletDetail.jsx
defi-react/src/services/: axios.js
etl/: .env  Dockerfile  dagster.yaml  requirements.txt  workspace.yaml
etl/aero/: __init__.py
etl/aero/assets/pit_users/: assets.py
etl/aero/definitions/pit_users/: definitions.py
etl/aero/jobs/pit_users/: jobs.py
etl/aero/ops/pit_users/: ops.py
etl/aero/resources/lake/: resource.py
etl/aero/resources/serializer/: resource.py
etl/aero/resources/vault/: resource.py
etl/aero/schedules/pit_users/: schedules.py
etl/framework/abstracts/: abstracts.py
etl/framework/bridge/: bridge.py
etl/framework/fabrics/pit_users/: fabrics.py
etl/framework/handlers/pit_users/aero/: handlers.py
microservices/clickhouse/: requirements.txt
microservices/clickhouse/app/orm/base/: __init__.py
microservices/clickhouse/app/orm/cfg/: engine.py
microservices/clickhouse/app/orm/models/pits/: pit_users.py
microservices/clickhouse/app/orm/scripts/: create.py  drop.py
microservices/clickhouse/app/views/: view.py
microservices/postgres/: requirements.txt
microservices/postgres/app/orm/: alembic.ini
microservices/postgres/app/orm/alembic/: env.py
microservices/postgres/app/orm/alembic/versions/: 2023_02_13_0542-bc4015952652_.py
microservices/postgres/app/orm/base/: __init__.py
microservices/postgres/app/orm/cfg/: engine.py
microservices/postgres/app/orm/models/hubs/: h_endpoints.py  h_sources.py
microservices/postgres/app/orm/models/links/: l_sources_endpoints.py
microservices/postgres/app/orm/scripts/: create.py  drop.py
microservices/postgres/app/views/: __init__.py  view.py
{{cookiecutter.project}}/: .default.env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
{{cookiecutter.project}}/.github/: CODEOWNERS
{{cookiecutter.project}}/.github/workflows/: codecov.yml  docker-build-push.yml  pre-commit.yml  pytest.yml
{{cookiecutter.project}}/app/: observer.py  settings.py  streaming.py
{{cookiecutter.project}}/app/adapters/connections/aiokafka/: consumer.py  producer.py
{{cookiecutter.project}}/app/adapters/connections/providers/: http.py  wss.py
{{cookiecutter.project}}/app/adapters/connectors/logger/: handler.py
{{cookiecutter.project}}/app/adapters/repositories/: abstract.py
{{cookiecutter.project}}/app/adapters/repositories/uniswap_v3/: repository.py
{{cookiecutter.project}}/app/schemas/transactions/: schema.py
{{cookiecutter.project}}/app/services/uniswap_v3/: service.py
{{cookiecutter.project}}/app/streams/: observe.py
{{cookiecutter.project}}/docker-entrypoint-initdb.d/: docker-entrypoint-initdb.sh
{{cookiecutter.project}}/scripts/: move_and_check.sh  mv.sh  standardize.sh
{{cookiecutter.project}}/tests/unit/: conftest.py
{{cookiecutter.project}}/tests/unit/adapters/repositories/decimals/: test_decimals.py
{{cookiecutter.project}}/tests/unit/adapters/repositories/erc20/: test_erc20.py
{{cookiecutter.project}}/tests/unit/adapters/repositories/symbols/: test_symbols.py
